--- a/css/styles.css
+++ b/css/styles.css
@@ -551,3 +551,31 @@
 .footer-social-page:focus {
     background-color: #31d0aa;
 }
+
+.backdrop {
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    background: rgba(46, 47, 66, 0.4);
+}
+
+.modal {
+    width: 408px;
+    min-height: 584px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background-color: #fcfcfc;
+    border-radius: 4px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 40px;
+}
+
+.modal-open {
+    border-radius: 100%;
+    fill: #e7e9fc;
+    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.1);
+}
