--- a/css/styles.css
+++ b/css/styles.css
@@ -554,7 +554,7 @@
 
 .backdrop {
     width: 100%;
-    height: 100px;
+    height: 100%;
     position: fixed;
     top: 0;
     background: rgba(46, 47, 66, 0.4);
@@ -570,12 +570,84 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 40px;
+    padding: 24px;
 }
 
 .modal-open {
     border-radius: 100%;
-    fill: #e7e9fc;
+    fill: #000000;
     stroke-width: 1px;
     stroke: rgba(0, 0, 0, 0.1);
+    margin-left: auto;
+}
+
+.modal-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+}
+.modal-field {
+    margin-bottom: 8px;
+}
+
+.modal-input {
+    width: 100%;
+    border-radius: 4px;
+    height: 58px;
+    background-color: transparent;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    padding-left: 62px;
+    outline: transparent;
+    transition: border-color 250ms ease cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+    border-color: #4d5ae5;
+}
+
+.modal-input:focus + .modal-icon {
+    fill: #4d5ae5;
+}
+
+
+
+.modal-label {
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: block;
+    margin-bottom: 8px;
+}
+
+.input-wrapper {
+    position: relative;
+}
+
+.modal-icon{
+    position: absolute;
+    left: 24px;
+    bottom: 50%;
+    transform: translateY(50%);
+    transition: fill 250ms ease;
+}
+
+.modal-textarea {
+    resize: none;
+    width: 100%;
+    height: 138px;
+    background: transparent;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    padding: 22px 24px;
+}
+
+.modal-textarea::placeholder {
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
 }
