--- a/css/styles.css
+++ b/css/styles.css
@@ -552,12 +552,23 @@
     background-color: #31d0aa;
 }
 
+/* modal */
+
 .backdrop {
     width: 100%;
     height: 100%;
     position: fixed;
     top: 0;
     background: rgba(46, 47, 66, 0.4);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 .modal {
@@ -645,9 +656,35 @@
     padding: 22px 24px;
 }
 
-.modal-textarea::placeholder {
+.modal-textarea::placeholder,.modal-check-text {
     font-size: 12px;
     line-height: 1.16667;
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-check-text {
+    color: #8e8f99;
+    display: flex;
+    align-items: center;
+}
+
+
+
+.modal-check-text span {
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+}
+
+.modal-class:checked + .modal-check-text span {
+    background-color: #404bbf;
+    fill: #f4f4fd;
+    border: 1px solid #404bbf;
 }
