--- a/css/styles.css
+++ b/css/styles.css
@@ -559,10 +559,13 @@
     height: 100%;
     position: fixed;
     top: 0;
+    left: 0;
     background: rgba(46, 47, 66, 0.4);
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .is-open {
@@ -582,14 +585,42 @@
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-open {
-    border-radius: 100%;
-    fill: #000000;
+    /* fill: #000000;
     stroke-width: 1px;
     stroke: rgba(0, 0, 0, 0.1);
-    margin-left: auto;
+    margin-left: auto; */
+
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-open:hover, .modal-open:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.modal-open-close {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-open-close:hover, .modal-open-close:focus {
+    fill: #ffffff;
 }
 
 .modal-title {
@@ -599,39 +630,40 @@
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    margin-bottom: 16px;
 }
 .modal-field {
     margin-bottom: 8px;
 }
-
+.comment-field {
+    margin-bottom: 16px;
+}
 .modal-input {
     width: 100%;
     border-radius: 4px;
-    height: 58px;
+    height: 40px;
     background-color: transparent;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    padding-left: 62px;
+    padding-left: 38px;
     outline: transparent;
-    transition: border-color 250ms ease cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus {
+.modal-input:focus, .modal-texarea:focus {
     border-color: #4d5ae5;
-}
+} 
 
-.modal-input:focus + .modal-icon {
+.modal-icon:focus {
     fill: #4d5ae5;
 }
 
-
-
 .modal-label {
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
 }
 
 .input-wrapper {
@@ -640,25 +672,32 @@
 
 .modal-icon{
     position: absolute;
-    left: 24px;
+    left: 16px;
+    top: 50%;
     bottom: 50%;
-    transform: translateY(50%);
-    transition: fill 250ms ease;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea {
-    resize: none;
-    width: 100%;
-    height: 138px;
-    background: transparent;
+    resize: none;width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    padding: 22px 24px;
+    padding: 8px 16px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .modal-textarea::placeholder,.modal-check-text {
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
 }
