--- a/css/styles.css
+++ b/css/styles.css
@@ -584,16 +584,11 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-open {
-    /* fill: #000000;
-    stroke-width: 1px;
-    stroke: rgba(0, 0, 0, 0.1);
-    margin-left: auto; */
-
     position: absolute;
     top: 24px;
     right: 24px;
@@ -619,7 +614,8 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-open-close:hover, .modal-open-close:focus {
+.modal-open:hover .modal-open-close,
+.modal-open:focus .modal-open-close {
     fill: #ffffff;
 }
 
@@ -649,7 +645,9 @@
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus, .modal-texarea:focus {
+.modal-input:focus {
+    border-color: #4d5ae5;
+} .modal-texarea:focus {
     border-color: #4d5ae5;
 } 
 
@@ -704,26 +702,54 @@
 
 .modal-check-text {
     color: #8e8f99;
-    display: flex;
     align-items: center;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
 }
 
 
 
-.modal-check-text span {
+.modal-checkbox-accept {
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     width: 16px;
     height: 16px;
     margin-right: 8px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     fill: transparent;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-class:checked + .modal-check-text span {
+.modal-check:checked + .modal-checkbox-accept {
     background-color: #404bbf;
     fill: #f4f4fd;
-    border: 1px solid #404bbf;
+    border: none;
+}
+
+.modal-privacy-link {
+    color: #4d5ae5;
+}
+
+.form-submit-btn {
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4d5ae5;
+    border: none;
+    margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-submit-btn:hover {
+    background-color: #3b4ac7;
 }
