--- a/css/styles.css
+++ b/css/styles.css
@@ -765,7 +765,61 @@
     border-radius: 4px;
         padding: 16px 32px;
 }
-
+/* footer sibscribe */
 .form-submit-btn:hover {
     background-color: #3b4ac7;
+}
+
+
+.subscribe-text {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+.subscribe-form {
+    display: flex;
+    gap: 24px;
+}
+
+.email-input-subscribe {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: #ffffff;
+}
+
+.email-input-subscribe::placeholder {
+    color: #ffffff;
+}
+
+.submit-button-subscribe {
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+}
+
+.button-icon-subscribe {
+    margin-left: 16px;
 }
